styles/team.css
a {
    text-decoration: underline;
    color: var(--blue);
}

h2, h3 {
    /*font-size: 30px;*/
    font-size: 2vw;
}

img {
    max-width: 50%;
    height: auto;
}

.row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;

    /*border: 1px solid white;*/
} 

.col {
    display: flex;
    flex-direction: column;

    justify-content: center;
    align-items: center;

    flex-basis: 100%;
    flex: 1;
    align-items: center;

    /*border: 1px solid yellow;*/
}

.about {
    /*font-size: 20px;*/
    font-size: 1.5vw;
    padding-left: 125px;
    padding-right: 125px;
}

.about_team {
    font-size: 1.5vw;
}

.title {
    /* font styling */
    text-align: center;
    letter-spacing: 1.5px;
}

.bear_team, .curriculum_dev_team, .contributors {
    /* positioning */
    position: relative;
    margin-left: 125px;
    margin-right: 125px;
    margin-top: 225px;
}

.team {
    margin-left: 100px;
    margin-right: 100px;
}

.name, .role {
    text-align: center;
    letter-spacing: 0.75px;
}

.external_links {
    margin-top: 15px;
}

.external_links i {
    color: white;
    transition: 1s;
    margin-left: 10px;
    margin-right: 10px;
}

.external_links i:hover {
    opacity: 0.75;
}

.name {
    /*font-size: 34px;*/
    font-size: 2vw;
    font-weight: 600;
    margin-bottom: 0px;
}

.role {
    margin-top: 5px;
    /*font-size: 24px;*/
    font-size: 1.5vw;
}

.avatar {
    margin-top: 25px;
    height: auto;
}

.dennis, .jesse, .eric {
    width: 55%;
}

.aaron, .jeremy, .rosa {
    width: 65%;
}

.student_name {
    margin-bottom: 5px;
}

.student_contributor {
    /*font-size: 20px;*/
    font-size: 1.5vw;
    margin-top: 0px;
}

.contributor_image {
    display: inline;
    margin: 0 auto;
    height: 100%;
    width: auto;
}

body {
    /* styling */
    font-size: 20px;

    /* positioning */
    margin-top: 0px;
    /*margin-left: 150px;*/
    /*margin-right: 150px;*/

    /* animations */    
    -moz-animation: fade_in 1.75s ease forwards;
    -webkit-animation: fade_in 1.75s ease forwards;
    -o-animation: fade_in 1.75s ease forwards;
    animation: fade_in 1.75s ease forwards;
    overflow-x: none;
}

@media (max-width: 768px) {
    .title {
        text-align: center;
        font-size: 7.5vw;
    }

    .about {
        font-size: 6vw;

        margin-left: 0px;
        margin-right: 0px;

        padding-left: 0px;
        padding-right: 0px;
    }

    .contributors {
        margin-left: 25px;
        margin-right: 25px;

        padding-left: 0px;
        padding-right: 0px;
    }

    .contributor_image {
        max-height: 75% !important;   
        width: auto !important;
    }

    .name, .role, .about_team {
        font-size: 6vw;
    }

    .student_name, .student_contributor {
        font-size: 6vw;
    }

    .bear_team, .curriculum_dev_team {
        margin-left: 25px;
        margin-right: 25px;
    }

    .bear_team {
        padding-top: 150px;
    }

    .student_row {
        flex-direction: row !important;
    }

    .row {
        flex-direction: column;
    }

    .col {
        align-items: center;
        text-align: center;
    }

    body {
        margin-top: -225px;
    }

    .gap {
        height: 25px;
    }
}

